Describe what you changed here

--- a/interviews.html
+++ b/interviews.html
@@ -63,37 +63,16 @@
       min-height: 100vh;
       box-sizing: border-box;
     }
-    .bottom-bar {
-      position: fixed;
-      left: 0;
-      bottom: 0;
-      width: 100vw;
-      background: rgba(56,69,31,0.82);
-      color: #fff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 36px;
-      padding: 18px 0 14px 0;
-      z-index: 100;
-      font-family: 'Permanent Marker', 'Montserrat', Arial, sans-serif;
-      font-size: 1.35em;
-      box-shadow: 0 -2px 12px #0005;
-      letter-spacing: 0.5px;
-    }
-    .bottom-bar a {
-      color: #f47a2c;
-      text-decoration: none;
-      font-weight: 700;
+          body {
+              background: #000 url('https://videos.openai.com/vg-assets/assets%2Ftask_01k3rt7bzzespt7mep56qyhs6s%2F1756400852_img_0.webp?st=2025-08-28T15%3A52%3A53Z&se=2025-09-03T16%3A52%3A53Z&sks=b&skt=2025-08-28T15%3A52%3A53Z&ske=2025-09-03T16%3A52%3A53Z&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skoid=aa5ddad1-c91a-4f0a-9aca-e20682cc8969&skv=2019-02-02&sv=2018-11-09&sr=b&sp=r&spr=https%2Chttp&sig=8X%2B%2Bf5os0GjZlKZUQ3rkgqCUku3L%2FkkQfyJRMEpCrUk%3D&az=oaivgprodscus') no-repeat center center fixed;
+              background-size: cover;
+            }
       padding: 6px 18px;
       border-radius: 8px;
       transition: background 0.18s, color 0.18s;
       background: transparent;
     }
     .bottom-bar a:hover {
-      background: #38451f;
-      color: #f47a2c;
-    }
     .bg-img-container {
   position: fixed;
   left: 0; top: 0;
