--- a/videos.html
+++ b/videos.html
@@ -74,49 +74,30 @@
         pointer-events: none;
       }
       .logo-link {
-        position: fixed;
-        top: 2vw;
-        left: 6vw;
-        z-index: 10;
-        background: transparent;
-        padding: 0;
-      }
-      .logo-img {
-        width: 20vw;
-        min-width: 100px;
-        max-width: 320px;
-        height: auto;
-        filter: brightness(1.35) drop-shadow(0 0 16px #fff8);
-        transition: width 0.2s, top 0.2s, left 0.2s;
-      }
-      .photos-hero {
-        width: 100vw;
-        height: 100vh;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        position: relative;
-        z-index: 1;
-      }
-      @media (max-width: 600px) {
-        .logo-link {
-          top: 12vw;
-          left: 2vw;
-        }
-        .logo-img {
-          width: 38vw;
-          min-width: 80px;
-          max-width: 180px;
-        }
-      }
-      .bottom-bar {
+          <style>
+            html, body {
+              height: 100%;
+              margin: 0;
+              padding: 0;
+            }
+            body {
+              width: 100vw;
+              height: 100vh;
+              overflow: hidden;
+              background: #000 url('https://videos.openai.com/vg-assets/assets%2Ftask_01k3rt7bzzespt7mep56qyhs6s%2F1756400852_img_0.webp?st=2025-08-28T15%3A52%3A53Z&se=2025-09-03T16%3A52%3A53Z&sks=b&skt=2025-08-28T15%3A52%3A53Z&ske=2025-09-03T16%3A52%3A53Z&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skoid=aa5ddad1-c91a-4f0a-9aca-e20682cc8969&skv=2019-02-02&sv=2018-11-09&sr=b&sp=r&spr=https%2Chttp&sig=8X%2B%2Bf5os0GjZlKZUQ3rkgqCUku3L%2FkkQfyJRMEpCrUk%3D&az=oaivgprodscus') no-repeat center center fixed;
+              background-size: cover;
+              display: block;
+              font-family: 'Montserrat', Arial, sans-serif;
+              color: #fff;
+              min-width: 100vw;
+              min-height: 100vh;
+              box-sizing: border-box;
+            }
+            /* Removed the bg-img-container and bg-img styles */
         position: fixed;
         left: 0;
         bottom: 0;
-        width: 100vw;
-        background: rgba(56,69,31,0.82);
-        color: #fff;
+          <!-- Background image is now set via CSS on the body -->
         display: flex;
         justify-content: center;
         align-items: center;
