--- a/photos.html
+++ b/photos.html
@@ -1,35 +1,29 @@
-    @media (max-width: 600px) {
-      .logo-link {
-        top: 12vw;
-        left: 2vw;
-      }
-      .logo-img {
-        width: 38vw;
-        min-width: 80px;
-        max-width: 180px;
-      }
-      .bottom-bar {
-        font-size: 1.1em;
-        gap: 10px;
-        padding: 10px 0 8px 0;
-      }
-      .bottom-bar a {
-        padding: 6px 8px;
-        font-size: 1em;
-      }
-      .photos-hero {
-        padding-top: 10vw;
-        padding-bottom: 18vw;
-        min-height: 100vh;
-        box-sizing: border-box;
-      }
-      .photos-title {
-        font-size: 9vw !important;
-        margin-bottom: 5vw;
-        padding: 0 2vw;
-      }
-    }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Photos | Dakota's Music World</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Permanent+Marker&display=swap" rel="stylesheet">
   <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+    body {
+      width: 100vw;
+      height: 100vh;
+      overflow: hidden;
+      background: #000 url('https://videos.openai.com/vg-assets/assets%2Ftask_01k3rt7bzzespt7mep56qyhs6s%2F1756400852_img_0.webp?st=2025-08-28T15%3A52%3A53Z&se=2025-09-03T16%3A52%3A53Z&sks=b&skt=2025-08-28T15%3A52%3A53Z&ske=2025-09-03T16%3A52%3A53Z&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skoid=aa5ddad1-c91a-4f0a-9aca-e20682cc8969&skv=2019-02-02&sv=2018-11-09&sr=b&sp=r&spr=https%2Chttp&sig=8X%2B%2Bf5os0GjZlKZUQ3rkgqCUku3L%2FkkQfyJRMEpCrUk%3D&az=oaivgprodscus') no-repeat center center fixed;
+      background-size: cover;
+      font-family: 'Montserrat', Arial, sans-serif;
+      color: #fff;
+      min-width: 100vw;
+      min-height: 100vh;
+      box-sizing: border-box;
+      display: block;
+    }
     .bottom-bar {
       position: fixed;
       left: 0;
@@ -61,8 +55,61 @@
       background: #38451f;
       color: #f47a2c;
     }
+    .logo-link {
+      position: fixed;
+      top: 2vw;
+      left: 6vw;
+      z-index: 10;
+      background: transparent;
+      padding: 0;
+    }
+    .logo-img {
+      width: 20vw;
+      min-width: 100px;
+      max-width: 320px;
+      height: auto;
+      filter: brightness(1.35) drop-shadow(0 0 16px #fff8);
+      transition: width 0.2s, top 0.2s, left 0.2s;
+    }
+    .photos-hero {
+      width: 100vw;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+      z-index: 1;
+    }
+    .photos-title {
+      font-family: 'Montserrat', Arial, sans-serif;
+      font-size: 3.2vw;
+      font-weight: 900;
+      color: #fff;
+      letter-spacing: 2px;
+      margin-bottom: 2vw;
+      text-align: center;
+      text-shadow: 2px 2px 0 #000, 0 0 32px #000a;
+    }
+    @media (max-width: 600px) {
+      .logo-link {
+        top: 12vw;
+        left: 2vw;
+      }
+      .logo-img {
+        width: 38vw;
+        min-width: 80px;
+        max-width: 180px;
+      }
+      .photos-title { font-size: 9vw; }
+    }
+    @media (max-width: 900px) {
+      .photos-title { font-size: 6vw; }
+    }
   </style>
+</head>
 <body>
+  <a href="index.html" class="logo-link"><img src="https://i.ibb.co/m5bVFqcV/Chat-GPT-Image-Aug-28-2025-at-02-46-48-PM-removebg-preview.png" alt="Logo" class="logo-img" border="0"></a>
   <nav class="bottom-bar">
     <a href="/index.html">Home</a>
     <a href="/photos.html">Photography</a>
@@ -70,6 +117,11 @@
     <a href="/interviews.html">Interviews</a>
     <a href="/contact.html">Contact</a>
   </nav>
+  <div class="photos-hero">
+    <!-- Add your photo gallery or content here -->
+  </div>
+</body>
+</html>
 <!DOCTYPE html>
 <html lang="en">
 <head>
