--- a/interviews.html
+++ b/interviews.html
@@ -1,44 +1,4 @@
-    @media (max-width: 600px) {
-      .logo-link {
-        top: 12vw;
-        left: 2vw;
-      }
-      .logo-img {
-        width: 38vw;
-        min-width: 80px;
-        max-width: 180px;
-      }
-      .bottom-bar {
-        font-size: 1.1em;
-        gap: 10px;
-        padding: 10px 0 8px 0;
-      }
-      .bottom-bar a {
-        padding: 6px 8px;
-        font-size: 1em;
-      }
-      .photos-hero, .interviews-hero {
-        padding-top: 10vw;
-        padding-bottom: 18vw;
-        min-height: 100vh;
-        box-sizing: border-box;
-      }
-      .interviews-title {
-        font-size: 9vw !important;
-        margin-bottom: 5vw;
-        padding: 0 2vw;
-      }
-    }
-  <!-- CSS moved to <head> -->
-<body>
-  <nav class="bottom-bar">
-  <a href="/index.html">Home</a>
-  <a href="/photos.html">Photography</a>
-  <a href="/videos.html">Live Recordings</a>
-  <a href="/interviews.html">Interviews</a>
-  <a href="/contact.html">Contact</a>
-  </nav>
-<!DOCTYPE html>
+    
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -67,33 +27,52 @@
               background: #000 url('https://videos.openai.com/vg-assets/assets%2Ftask_01k3rt7bzzespt7mep56qyhs6s%2F1756400852_img_0.webp?st=2025-08-28T15%3A52%3A53Z&se=2025-09-03T16%3A52%3A53Z&sks=b&skt=2025-08-28T15%3A52%3A53Z&ske=2025-09-03T16%3A52%3A53Z&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skoid=aa5ddad1-c91a-4f0a-9aca-e20682cc8969&skv=2019-02-02&sv=2018-11-09&sr=b&sp=r&spr=https%2Chttp&sig=8X%2B%2Bf5os0GjZlKZUQ3rkgqCUku3L%2FkkQfyJRMEpCrUk%3D&az=oaivgprodscus') no-repeat center center fixed;
               background-size: cover;
             }
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+    body {
+      width: 100vw;
+      height: 100vh;
+      overflow: hidden;
+      background: #000 url('https://videos.openai.com/vg-assets/assets%2Ftask_01k3rt7bzzespt7mep56qyhs6s%2F1756400852_img_0.webp?st=2025-08-28T15%3A52%3A53Z&se=2025-09-03T16%3A52%3A53Z&sks=b&skt=2025-08-28T15%3A52%3A53Z&ske=2025-09-03T16%3A52%3A53Z&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skoid=aa5ddad1-c91a-4f0a-9aca-e20682cc8969&skv=2019-02-02&sv=2018-11-09&sr=b&sp=r&spr=https%2Chttp&sig=8X%2B%2Bf5os0GjZlKZUQ3rkgqCUku3L%2FkkQfyJRMEpCrUk%3D&az=oaivgprodscus') no-repeat center center fixed;
+      background-size: cover;
+      display: block;
+      font-family: 'Montserrat', Arial, sans-serif;
+      color: #fff;
+      min-width: 100vw;
+      min-height: 100vh;
+      box-sizing: border-box;
+    }
+    .bottom-bar {
+      position: fixed;
+      left: 0;
+      bottom: 0;
+      width: 100vw;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 36px;
+      padding: 18px 0 14px 0;
+      z-index: 100;
+      font-family: 'Permanent Marker', 'Montserrat', Arial, sans-serif;
+      font-size: 1.35em;
+      box-shadow: 0 -2px 12px #0005;
+      letter-spacing: 0.5px;
+    }
+    .bottom-bar a {
+      color: #f47a2c;
+      text-decoration: none;
+      font-weight: 700;
       padding: 6px 18px;
       border-radius: 8px;
       transition: background 0.18s, color 0.18s;
       background: transparent;
     }
     .bottom-bar a:hover {
-    .bg-img-container {
-  position: fixed;
-  left: 0; top: 0;
-  width: 100vw;
-  height: 100vh;
-  z-index: 0;
-  overflow: hidden;
-  /* background removed to prevent yellow flash */
-    }
-    .bg-img {
-  width: 100vw;
-  height: 100vh;
-  object-fit: cover;
-  object-position: center center;
-  position: absolute;
-  left: 0; top: 0;
-  z-index: 0;
-  user-select: none;
-  pointer-events: none;
-  /* No background CSS here, image is set via <img> src */
-  transition: none;
+      background: #38451f;
+      color: #f47a2c;
     }
     .logo-link {
       position: fixed;
@@ -111,7 +90,7 @@
       filter: brightness(1.35) drop-shadow(0 0 16px #fff8);
       transition: width 0.2s, top 0.2s, left 0.2s;
     }
-    .photos-hero {
+    .photos-hero, .interviews-hero {
       width: 100vw;
       height: 100vh;
       display: flex;
@@ -120,6 +99,10 @@
       justify-content: center;
       position: relative;
       z-index: 1;
+      padding-top: 10vw;
+      padding-bottom: 18vw;
+      min-height: 100vh;
+      box-sizing: border-box;
     }
     .hotspot {
       position: absolute;
@@ -166,16 +149,24 @@
         min-width: 80px;
         max-width: 180px;
       }
+      .bottom-bar {
+        font-size: 1.1em;
+        gap: 10px;
+        padding: 10px 0 8px 0;
+      }
+      .bottom-bar a {
+        padding: 6px 8px;
+        font-size: 1em;
+      }
+      .photos-hero, .interviews-hero {
+        padding-top: 10vw;
+        padding-bottom: 18vw;
+        min-height: 100vh;
+        box-sizing: border-box;
+      }
+      .interviews-title {
+        font-size: 9vw !important;
+        margin-bottom: 5vw;
+        padding: 0 2vw;
+      }
     }
-  </style>
-</head>
-<body>
-  <div class="bg-img-container">
-  <img src="iv.png" class="bg-img" alt="Interview Collection Background" />
-  </div>
-  <a href="/index.html" class="logo-link"><img src="https://i.ibb.co/m5bVFqcV/Chat-GPT-Image-Aug-28-2025-at-02-46-48-PM-removebg-preview.png" alt="Logo" class="logo-img" border="0"></a>
-  <div class="photos-hero">
-  <!-- Add your interviews content here -->
-  </div>
-</body>
-</html>
