Describe what you changed here

--- a/photos.html
+++ b/photos.html
@@ -57,7 +57,7 @@
     }
     .logo-link {
       position: fixed;
-      top: 2vw;
+  min-height: 100vh;
       left: 6vw;
       z-index: 10;
       background: transparent;
